terminado hasta banner social

--- a/index.html
+++ b/index.html
@@ -34,11 +34,100 @@
         <hr>
         <!-- showcase -->
         <header class="showcase">
-            <h2>Big News Todas</h2>
+            <h2>Big News Today</h2>
+            <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, vero voluptatem! At et explicabo, a, aspernatur velit pariatur consectetur temporibus veniam delectus quia quo maxime earum recusandae tempora omnis amet?</p>
             <a href="#" class="btn">  <i class="fas fa-angle-double-right"></i>Read More</a>
-
         </header>
+        <!-- news cards -->
+        <div class="news-cards">
+           
+            <div>
+                <img src="img/news1.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news2.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news5.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news4.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+        </div>
+
+        <section class="cards-banner-one">
+        <div class="content">
+            <h2>Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae asperiores ab sed, 
+                obcaecati deserunt soluta a doloremque ipsam repellat natus?</p>
+                <a href="#" class="btn">learn More<i class="fas fa-angle-double-right"></i></a>
+        </div>
+        </section>
+        <!-- news cards -->
+        <div class="news-cards">
+           
+            <div>
+                <img src="img/news1.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news5.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news4.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+            <div>
+                <img src="img/news3.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, sint repellat doloremque dicta id
+                     ab ratione excepturi exercitationem fugit aspernatur?</p>
+                    <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a> 
+            </div>
+        </div>
+        <section class="cards-banner-two">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ad repellendus earum obcaecati fugiat, eos veniam. Omnis excepturi ullam debitis porro nesciunt cum, 
+                    odit necessitatibus facilis, dolorum repellat perferendis veritatis?</p>
+                    <a href="#">Aprender Mas <i class="fas fa-angle-double-right"></i></a>
+            </div>
+    </section>
+    <section class="social">
+        <p>Follow TechNews</p>
+        <div class="links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </section>
     </div>
 
 </body>
