--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <title>Tech News</title>
     <!-- font-awesom -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- font-family -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
+    
 </head>
 <body>
+   <div class="menu-btn">
+<i class="fas fa-bars"></i>
+   </div>
     <div class="container">
         <nav class="nav-main">
             <img src="img/WhatsApp Image 2020-09-26 at 10.23.11 AM.jpeg" class="nav-brand" alt="logo">
-            <ul class="nav-menu">
+            <ul class="nav-menu show">
                 <li><a href="#">Web Developent</a></li>
-                <li><a href="#">Blochaing</a></li>
+                <li><a href="#">Blockhaing</a></li>
                 <li><a href="#">Artificial Intelligence</a></li>
                 <li><a href="#">Machine Learnig</a></li>
                 <li><a href="#">Quantum computing</a></li>
@@ -236,5 +241,9 @@
 <footer class="footer">
 Rinodevs copyright
 </footer>
+<!-- scroll reveal -->
+<script src="https://unpkg.com/scrollreveal"></script>
+<!-- custom js -->
+<script src="js/main.js"></script>
 </body>
 </html>
